Fix: Info-dialog headers don't fit on small screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,6 +70,10 @@ h3 {
   max-width: 100%;
   border-bottom: 3px solid mat-color($primary);
   font-size: 2em;
+
+  @media only screen and ($small-screen) {
+    font-size: 1.6em;
+  }
 }
 
 app-root, app-tag-list {
